--- a/trabajos.html
+++ b/trabajos.html
@@ -1,61 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="WorksStyles.css">
-        <title>Shiroko's Works</title>
-    </head>
-    <body>
-        <div class="Card">
-            <h1 class="Title"><img class="Icon" src="/Images/DiscIcon.png"> Discord bot <b style="color:#642222">(WIP)</b></h1>
-            <div class="Content">
-                <p class="Text">A few years ago I started this project,just a simple discord bot that
-                    could reproduce music, check if someone is live in twitch, see your current rank
-                    in lol and some other silly things that I have made throught the time. Half made by a friend
-                </p>
-                <figure>
-                    <img  class="IMG" src="/Images/DiscordBotSample.png">
-                </figure>
-            </div>     
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="WorksStyles.css">
+    <title>Shiroko's Works</title>
+</head>
+
+<body>
+    <div class="Card">
+        <h1 class="Title"><img class="Icon" src="Images/DiscIcon.png"> Discord bot <b style="color:#642222">(WIP)</b>
+        </h1>
+        <div class="Content">
+            <p class="Text">A few years ago I started this project,just a simple discord bot that could reproduce music,
+                check if someone is live in twitch, see your current rank in lol and some other silly things that I have
+                made throught the time.
+            </p>
+            <figure>
+                <img class="IMG" src="Images/DiscordBotSample.png">
+            </figure>
         </div>
-        <div class="Card">
-            <h1 class="Title"><img class="Icon" src="/Images/SnakeIcon.png"> Snake </h1>
-            <div class="Content">
-                <p class="Text">This project was one of my first ones, is actually quite simple,
-                    lists, bitmap, one picture box and some small things are pretty much all the elements
-                    that I used to create this "snake". Someday, I'll make a better version of this.
-                </p>
-                <figure>
-                    <img  class="IMG" src="/Images/SnakeSample.png">
-                </figure>
-            </div>     
+    </div>
+    <div class="Card">
+        <h1 class="Title"><img class="Icon" src="Images/SnakeIcon.png"> Snake </h1>
+        <div class="Content">
+            <p class="Text">This project was one of my first ones; it is actually quite simple. Lists, bitmaps, one
+                picture box, and some small things are pretty much all the elements that I used to create this "snake."
+                Someday, I'll make a better version of this
+            </p>
+            <figure>
+                <img class="IMG" src="Images/SnakeSample.png">
+            </figure>
         </div>
-        <div class="Card">
-            <h1 class="Title"><img class="Icon" src="/Images/TwitchIcon.png"> Twitch bot <b style="color:#642222">(WIP)</b></h1>
-            <div class="Content">
-                <p class="Text">At the same time that I started with the discord bot I tried to do 
-                    this Twitch bot. This bot can save text comands but its functionality is still 
-                    in progress, It only have the osu one and sometimes doesn't work. All the complex parts are done by my friend
-                </p>
-                <figure>
-                    <img  class="IMG" src="/Images/TwitchBotSample.png">
-                </figure>
-            </div>     
+    </div>
+    <div class="Card">
+        <h1 class="Title"><img class="Icon" src="Images/TwitchIcon.png"> Twitch bot <b style="color:#642222">(WIP)</b>
+        </h1>
+        <div class="Content">
+            <p class="Text">At the same time that I started with the discord bot, I also tried to work on a Twitch bot.
+                This bot has the capability to save text commands, but its functionality is still a work in progress.
+                Currently, it only has the osu command and sometimes doesn't work properly.
+            </p>
+            <figure>
+                <img class="IMG" src="Images/TwitchBotSample.png">
+            </figure>
         </div>
-        <div class="Card">
-            <h1 class="Title"><img class="Icon" src="/Images/YTIcon.png"> YTDLP-UI <b style="color:#642222">(WIP)</b></h1>
-            <div class="Content">
-                <p class="Text"> This one may be the simplest one, because it is just an UI. This UI helps the user
-                    with yt-dlp, because i thought taht this video downloader tool can be a bit hard to use for some people
-                    like me, using console comands are uncomfortable, so this UI enables to user to use the tool in a easy way
-                </p>
-                <figure>
-                    <img class="IMG" src="/Images/YTDLPHSample.png">
-                </figure>
-            </div>     
+    </div>
+    <div class="Card">
+        <h1 class="Title"><img class="Icon" src="Images/YTIcon.png"> YTDLP-UI <b style="color:#642222">(WIP)</b></h1>
+        <div class="Content">
+            <p class="Text"> This may be the simplest one, as it is just a user interface (UI). The UI is designed to
+                assist users with yt-dlp, as I found the video downloader tool to be difficult to use with console
+                commands. Using commands in the console can be uncomfortable for some, so this UI allows users to easily
+                utilize the tool.
+            </p>
+            <figure>
+                <img class="IMG" src="Images/YTDLPHSample.png">
+            </figure>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
