--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <body>
         <div class="profile-card">
             <figure class="profile-image__">
-                <img src="/Images/Profile.png" alt="Here is supposede to be an image ;p"> 
+                <img src="./Images/Profile1.png" alt="Here is supposede to be an image ;p"> 
             </figure>
             <div class="profile-image__desc">
-                <h1>Shiroko Kuyubyu</h1>
-                <div class="prof">Subnormal Profesional</div>
+                <h1>Santiago Delgado</h1>
+                <div class="prof">Developer</div>
                 <div class="geo">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                         <path d="M12 11m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
                         <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"></path>
                     </svg>
-                    <span>Somewhere, Earth</span>
+                    <span>Zaragoza, Spain</span>
                 </div>
                 <div class="social">
                     <a class="github" href="https://github.com/KoGoLLo52" target="_blank">
@@ -31,12 +31,7 @@
                             <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
                         </svg>
                     </a>
-                    <a class="twitter" href="https://twitter.com/rokoshi31" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c0 -.249 1.51 -2.772 1.818 -4.013z"></path>
-                        </svg>
-                    </a>
+                    
                 </div>
                 <div class="profile-card__button">
                     <a href="trabajos.html" class="Trabajos">Some Works</a>
